# clippyboard

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
clippyboard-clear/: Cargo.toml
clippyboard-clear/src/: main.rs
clippyboard-daemon/: Cargo.toml
clippyboard-daemon/src/: main.rs
clippyboard-select/: Cargo.toml
clippyboard-select/src/: main.rs
clippyboard-shared/: Cargo.toml
clippyboard-shared/src/: lib.rs
src/: daemon.rs  display.rs  lib.rs  main.rs
