[package]
name = "clippyboard-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
clippyboard-shared = { path = "../clippyboard-shared" }
ciborium = "0.2.2"
ctrlc = "3.5.0"
dirs = "6.0.0"
eyre = "0.6.12"
rustix = "1.1.2"
serde = "1.0.219"
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
wayland-backend = { version = "0.3.11", features = ["client_system"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["staging", "client"] }
